--- a/src/index.html
+++ b/src/index.html
@@ -22,6 +22,7 @@
     <meta name="format-detection" content="date=no" />
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
+    <link href="//at.alicdn.com/t/font_olk43nf5egffxbt9.css" rel="stylesheet">
 </head>
 
 <body>
